[tool.poetry]
name = "github-cli-py"
version = "0.1.0"
description = ""
authors = ["comacrae <comacrae1995@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
pydantic = "^2.10.6"
pytest = "^8.3.5"
rich = "^13.9.4"
mypy = "^1.15.0"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

